--- a/data/stories/get_started_intro.yml
+++ b/data/stories/get_started_intro.yml
@@ -3,26 +3,34 @@ stories:
 
 - story: Getting started with Rasa playground
   steps:
-  - intent: how_to_get_started
   - action: utter_ask_playground_install_info
   - intent: affirm
   - action: utter_what_help
 
 - story: Getting started with Rasa playground
   steps:
-  - intent: how_to_get_started
+  - action: utter_ask_playground_install_info
+  - intent: enter_data
+    entities:
+    - product: playground
+  - slot_was_set:
+    - product: playground
+  - action: utter_faq/rasa_playground
+  - action: action_set_faq_slot
+
+- story: Getting started with Rasa playground
+  steps:
   - action: utter_ask_playground_install_info
   - intent: faq
     entities:
     - product: playground
   - slot_was_set:
     - product: playground
-  - action: utter_playground_intro
+  - action: utter_faq
   - action: action_set_faq_slot
 
 - story: Getting started with Rasa Open Source installation
   steps:
-  - intent: how_to_get_started
   - action: utter_ask_playground_install_info
   - intent: install_rasa
   - action: utter_installation_command
@@ -31,7 +39,6 @@ stories:
 
 - story: Getting started with Rasa Open Source installation
   steps:
-  - intent: how_to_get_started
   - action: utter_ask_playground_install_info
   - intent: install_rasa
   - action: utter_installation_command
@@ -40,7 +47,6 @@ stories:
 
 - story: Getting started with Rasa X local mode installation
   steps:
-  - intent: how_to_get_started
   - action: utter_ask_playground_install_info
   - intent: install_rasa
     entities:
@@ -58,7 +64,6 @@ stories:
 
 - story: Getting started with Rasa X local mode installation
   steps:
-  - intent: how_to_get_started
   - action: utter_ask_playground_install_info
   - intent: install_rasa
     entities:
@@ -76,7 +81,6 @@ stories:
 
 - story: Getting started with Rasa X server installation
   steps:
-  - intent: how_to_get_started
   - action: utter_ask_playground_install_info
   - intent: install_rasa
     entities:
@@ -93,7 +97,6 @@ stories:
 
 - story: Getting started with Starter Packs
   steps:
-  - intent: how_to_get_started
   - action: utter_ask_playground_install_info
   - intent: deny
   - action: utter_interested_in_starter_packs
@@ -103,7 +106,6 @@ stories:
 
 - story: Catch-all case of getting started
   steps:
-  - intent: how_to_get_started
   - action: utter_ask_playground_install_info
   - intent: deny
   - action: utter_interested_in_starter_packs
@@ -113,14 +115,13 @@ stories:
 
 - story: Getting started with Rasa playground
   steps:
-  - intent: how_to_get_started
   - action: utter_ask_playground_install_info
   - intent: faq
     entities:
     - product: playground
   - slot_was_set:
     - product: playground
-  - action: utter_playground_intro
+  - action: utter_faq
   - action: action_set_faq_slot
   - intent: install_rasa
     entities:
@@ -131,7 +132,6 @@ stories:
 
 - story: Getting more info about Rasa
   steps:
-  - intent: how_to_get_started
   - action: utter_ask_playground_install_info
   - intent: trigger_response_selector
     entities:
