--- a/data/stories/get_started_playground.yml
+++ b/data/stories/get_started_playground.yml
@@ -3,7 +3,7 @@ stories:
 - story: Getting started on Playground Page
   steps:
   - intent: get_started_playground
-  - action: utter_playground_intro
+  - action: utter_faq/rasa_playground
   - action: utter_ask_playground_help
   - intent: affirm
   - action: utter_what_help
@@ -11,13 +11,13 @@ stories:
 - story: Getting started on Playground Page, Rasa Open Source installation
   steps:
   - intent: get_started_playground
-  - action: utter_playground_intro
+  - action: utter_faq/rasa_playground
   - action: utter_ask_playground_help
   - intent: deny
   - action: utter_interested_in_installation
   - intent: affirm
   - action: utter_ask_which_product
-  - intent: faq
+  - intent: install_rasa
     entities:
     - product: rasa
   - slot_was_set:
@@ -29,7 +29,7 @@ stories:
 - story: Getting started on Playground Page, Rasa Open Source installation
   steps:
   - intent: get_started_playground
-  - action: utter_playground_intro
+  - action: utter_faq/rasa_playground
   - action: utter_ask_playground_help
   - intent: deny
   - action: utter_interested_in_installation
@@ -47,13 +47,13 @@ stories:
 - story: Getting started on Playground Page, Rasa X installation
   steps:
   - intent: get_started_playground
-  - action: utter_playground_intro
+  - action: utter_faq/rasa_playground
   - action: utter_ask_playground_help
   - intent: deny
   - action: utter_interested_in_installation
   - intent: affirm
   - action: utter_ask_which_product
-  - intent: faq
+  - intent: install_rasa
     entities:
     - product: x
   - slot_was_set:
@@ -64,13 +64,13 @@ stories:
 - story: Getting started on Playground Page, Rasa X installation
   steps:
   - intent: get_started_playground
-  - action: utter_playground_intro
+  - action: utter_faq/rasa_playground
   - action: utter_ask_playground_help
   - intent: deny
   - action: utter_interested_in_installation
   - intent: affirm
   - action: utter_ask_which_product
-  - intent: how_to_get_started
+  - intent: install_rasa
     entities:
     - product: x
   - slot_was_set:
@@ -80,7 +80,7 @@ stories:
 - story: Getting started on Playground Page, catch-all
   steps:
   - intent: get_started_playground
-  - action: utter_playground_intro
+  - action: utter_faq/rasa_playground
   - action: utter_ask_playground_help
   - intent: deny
   - action: utter_interested_in_installation
