--- a/config.yml
+++ b/config.yml
@@ -42,17 +42,18 @@ pipeline:
 - name: FallbackClassifier
   threshold: 0.7
 policies:
-- name: TEDPolicy
-  model_confidence: linear_norm
-  max_history: 10
-  epochs: 20
-  batch_size:
-  - 32
-  - 64
-  constrain_similarities: true
-- max_history: 6
-  name: AugmentedMemoizationPolicy
 - name: RulePolicy
   core_fallback_threshold: 0.3
   core_fallback_action_name: "action_default_fallback"
   enable_fallback_prediction: True
+- name: AugmentedMemoizationPolicy
+  max_history: 6
+
+# - name: TEDPolicy
+#   model_confidence: linear_norm
+#   max_history: 10
+#   epochs: 20
+#   batch_size:
+#   - 32
+#   - 64
+#   constrain_similarities: true
