--- a/data/nlu/responses/responses.yml
+++ b/data/nlu/responses/responses.yml
@@ -4,10 +4,24 @@ responses:
   - text: "I only understand English, I'm sorry."
   utter_out_of_scope/other:
   - text: "I can't help you with that, I'm sorry."
+  utter_faq/nlu:
+  - text: "Natural Language Understanding (NLU) deals with parsing and understanding human language into a structured format. 
+    Rasa's NLU engine is defined by an [NLU pipeline](https://rasa.com/docs/rasa/tuning-your-model#how-to-choose-a-pipeline) and trained on [NLU training data](https://rasa.com/docs/rasa/nlu-training-data).
+    Usually, an NLU pipeline will include components for:
+      - Intent classification: Interpreting meaning based on predefined intents (Example: “Please send the confirmation to amy@example.com” is a send_confirmation intent with 93% confidence)
+      - Entity extraction: Recognizing structured data (Example: amy@example.com is an email)."
+  utter_faq/rasa_components:
+  - text: "Rasa Open Source is a machine learning framework for automated text and voice-based conversations.
+    Rasa Open Source consists of NLU (Natural Language Understanding) and Dialogue Management.  
+    Rasa X is a tool that helps you build, improve, and deploy AI Assistants that are powered by the Rasa Open Source framework."
+  utter_faq/dialogue_management:
+  - text: "Dialogue management is responsible for deciding what to do next in a conversation based on the context.
+    Rasa Dialogue Management is defined by [policies](https://rasa.com/docs/rasa/policies) and trained on 
+    [stories](https://rasa.com/docs/rasa/stories) and [rules](https://rasa.com/docs/rasa/rules)"
   utter_faq/rasa_playground:
-  - text: "Rasa playground is a guided page where you can learn the basics of building an assistant in Rasa Open Source.
-    You'll be able to customize the assistant, talk to it, and download the project so you can continue to build.
-    You can access the playground by visiting this [page](https://rasa.com/docs/rasa/playground)."
+  - text: "In the [Rasa Playground](https://rasa.com/docs/rasa/playground) you can
+          build a Rasa prototype entirely online. Once you've built your prototype, you can talk to
+          your bot online and download your project to continue developing it locally."
   utter_faq/channels:
   - text: "We have a [comprehensive list of supported connectors](https://rasa.com/docs/core/connectors/),
     but if you don't see the one you're looking for, you can always create a custom connector by following
@@ -18,12 +32,12 @@ responses:
   - text: "You can use Rasa to build assistants in any language you want!"
   utter_faq/is_programming_required:
   - text: "Rasa Open Source is written in Python, but programming is not required to develop an assistant.
-  To learn how to create an assistant, check out the [Rasa Masterclass](https://www.youtube.com/watch?v=rlAQWbhwqLA).
-  There is one place where programming skills come in handy, and that is when implementing
-  [custom actions](https://rasa.com/docs/rasa/core/actions/#custom-actions). You can create an action server in
-  Node.js, .NET, Java, or any other language and define your actions there. For custom actions written in Python,
-  we provide a small [Python SDK](https://rasa.com/docs/rasa/api/rasa-sdk/#rasa-sdk) to make development even easier."
-  utter_faq/tutorialnlu:
+    To learn how to create an assistant, check out the [Rasa Masterclass](https://www.youtube.com/watch?v=rlAQWbhwqLA).
+    There is one place where programming skills come in handy, and that is when implementing
+    [custom actions](https://rasa.com/docs/rasa/core/actions/#custom-actions). You can create an action server in
+    Node.js, .NET, Java, or any other language and define your actions there. For custom actions written in Python,
+    we provide a small [Python SDK](https://rasa.com/docs/rasa/api/rasa-sdk/#rasa-sdk) to make development even easier."
+  utter_faq/tutorial_nlu:
   - text: "Rasa Masterclass episodes 2-4 focus on NLU. Check out episode 2
     [here](https://www.youtube.com/watch?v=k5UeywXA28k)."
   utter_faq/ee:
@@ -40,7 +54,7 @@ responses:
   - text: "Slots act as a key-value store which can be used to store information the user provided
     (e.g their home city) as well as information gathered about the outside world
     (e.g. the result of a database query). Learn more [here](https://rasa.com/docs/rasa/core/slots/)."
-  utter_faq/tutorialcore:
+  utter_faq/tutorial_dialogue_management:
   - text: "Rasa Masterclass has a great introduction to dialogue management
     [here](https://www.youtube.com/watch?v=WoTmnN2EMdo)."
   utter_faq/tutorials:
@@ -54,8 +68,8 @@ responses:
   - text: "[Rasa Forum](https://forum.rasa.com) is the place where all the community buzz happens.
     It's a place to join discussions, get the answers to your technical questions and get the latest updates
     on what's happening at Rasa."
-  utter_faq/differencecorenlu:
-  - text: "NLU’s job is to interpret messages, and Core’s job is to decide what should happen next."
+  utter_faq/difference_dialogue_management_nlu:
+  - text: "NLU’s job is to interpret messages, and Dialogue Management's job is to decide what should happen next."
   utter_faq/differencerasarasax:
   - text: "Rasa Open Source is a framework you can use to build an assistant. Rasa X is a toolset built on
     top of Rasa Open Source that comes with a UI that helps you learn from real conversations and improve your
