--- a/data/stories/chitchat.yml
+++ b/data/stories/chitchat.yml
@@ -46,17 +46,14 @@ stories:
   - action: utter_ask_migration
   - intent: deny
   - action: utter_explain_rasa_components
-  - action: utter_rasa_components_details
-  - action: utter_ask_explain_nlucorex
+  - action: utter_faq/rasa_components
+  - action: utter_ask_explain_nlu_dialogue_management_x
   - or:
     - intent: affirm
-    - intent: how_to_get_started
-      entities:
-      - product: all
     - intent: explain
-  - action: utter_explain_nlu
-  - action: utter_explain_core
-  - action: utter_explain_x
+  - action: utter_faq/nlu
+  - action: utter_faq/dialogue_management
+  - action: utter_faq/rasax
 - story: new to rasa + not new to chatbots + not migrating
   steps:
   - intent: greet
@@ -80,17 +77,14 @@ stories:
   - action: utter_ask_migration
   - intent: deny
   - action: utter_explain_rasa_components
-  - action: utter_rasa_components_details
-  - action: utter_ask_explain_nlucorex
+  - action: utter_faq/rasa_components
+  - action: utter_ask_explain_nlu_dialogue_management_x
   - or:
     - intent: affirm
-    - intent: how_to_get_started
-      entities:
-      - product: all
     - intent: explain
-  - action: utter_explain_nlu
-  - action: utter_explain_core
-  - action: utter_explain_x
+  - action: utter_faq/nlu
+  - action: utter_faq/dialogue_management
+  - action: utter_faq/rasax
 - story: new to rasa + not new to chatbots + not migrating
   steps:
   - intent: greet
@@ -114,17 +108,14 @@ stories:
   - action: utter_ask_migration
   - intent: deny
   - action: utter_explain_rasa_components
-  - action: utter_rasa_components_details
-  - action: utter_ask_explain_nlucorex
+  - action: utter_faq/rasa_components
+  - action: utter_ask_explain_nlu_dialogue_management_x
   - or:
     - intent: affirm
-    - intent: how_to_get_started
-      entities:
-      - product: all
     - intent: explain
-  - action: utter_explain_nlu
-  - action: utter_explain_core
-  - action: utter_explain_x
+  - action: utter_faq/nlu
+  - action: utter_faq/dialogue_management
+  - action: utter_faq/rasax
 - story: new to rasa + not new to chatbots + not migrating
   steps:
   - intent: greet
@@ -148,15 +139,16 @@ stories:
   - action: utter_ask_migration
   - intent: deny
   - action: utter_explain_rasa_components
-  - action: utter_rasa_components_details
-  - action: utter_ask_explain_nlucorex
-  - intent: faq
+  - action: utter_faq/rasa_components
+  - action: utter_ask_explain_nlu_dialogue_management_x
+  - intent: enter_data
     entities:
     - product: rasa
   - slot_was_set:
     - product: rasa
-  - action: utter_explain_nlu
-  - action: utter_explain_core
+  - action: utter_faq/rasa_components
+  - action: utter_faq/nlu
+  - action: utter_faq/dialogue_management
 - story: new to rasa + not new to chatbots + not migrating
   steps:
   - intent: greet
@@ -180,17 +172,14 @@ stories:
   - action: utter_ask_migration
   - intent: deny
   - action: utter_explain_rasa_components
-  - action: utter_rasa_components_details
-  - action: utter_ask_explain_nlucorex
+  - action: utter_faq/rasa_components
+  - action: utter_ask_explain_nlu_dialogue_management_x
   - or:
     - intent: affirm
-    - intent: how_to_get_started
-      entities:
-      - product: all
     - intent: explain
-  - action: utter_explain_nlu
-  - action: utter_explain_core
-  - action: utter_explain_x
+  - action: utter_faq/nlu
+  - action: utter_faq/dialogue_management
+  - action: utter_faq/rasax
 - story: new to rasa + not new to chatbots + not migrating
   steps:
   - intent: greet
@@ -211,20 +200,17 @@ stories:
   - action: utter_ask_migration
   - intent: deny
   - action: utter_explain_rasa_components
-  - action: utter_rasa_components_details
-  - action: utter_ask_explain_nlucorex
+  - action: utter_faq/rasa_components
+  - action: utter_ask_explain_nlu_dialogue_management_x
   - intent: chitchat
   - action: utter_chitchat
-  - action: utter_ask_explain_nlucorex
+  - action: utter_ask_explain_nlu_dialogue_management_x
   - or:
     - intent: affirm
-    - intent: how_to_get_started
-      entities:
-      - product: all
     - intent: explain
-  - action: utter_explain_nlu
-  - action: utter_explain_core
-  - action: utter_explain_x
+  - action: utter_faq/nlu
+  - action: utter_faq/dialogue_management
+  - action: utter_faq/rasax
 - story: new to rasa + not new to chatbots + not migrating
   steps:
   - intent: greet
@@ -245,17 +231,14 @@ stories:
   - action: utter_ask_migration
   - intent: deny
   - action: utter_explain_rasa_components
-  - action: utter_rasa_components_details
-  - action: utter_ask_explain_nlucorex
+  - action: utter_faq/rasa_components
+  - action: utter_ask_explain_nlu_dialogue_management_x
   - or:
     - intent: affirm
-    - intent: how_to_get_started
-      entities:
-      - product: all
     - intent: explain
-  - action: utter_explain_nlu
-  - action: utter_explain_core
-  - action: utter_explain_x
+  - action: utter_faq/nlu
+  - action: utter_faq/dialogue_management
+  - action: utter_faq/rasax
   - intent: chitchat
   - action: utter_chitchat
 - story: new to rasa/bots, explain NLU and try it out
@@ -279,15 +262,16 @@ stories:
   - action: utter_built_bot_before
   - intent: deny
   - action: utter_explain_rasa_components
-  - action: utter_rasa_components_details
-  - action: utter_ask_explain_nlucorex
-  - intent: how_to_get_started
+  - action: utter_faq/rasa_components
+  - action: utter_ask_explain_nlu_dialogue_management_x
+  - intent: faq
     entities:
     - product: nlu
-  - action: utter_explain_nlu
-  - action: utter_also_explain_core
+  - action: utter_faq
+  - action: action_set_faq_slot
+  - action: utter_also_explain_dialogue_management
   - intent: affirm
-  - action: utter_explain_core
+  - action: utter_faq/dialogue_management
 - story: new to rasa/bots, explain rasa x only
   steps:
   - intent: greet
@@ -306,8 +290,8 @@ stories:
   - action: utter_built_bot_before
   - intent: deny
   - action: utter_explain_rasa_components
-  - action: utter_rasa_components_details
-  - action: utter_ask_explain_nlucorex
+  - action: utter_faq/rasa_components
+  - action: utter_ask_explain_nlu_dialogue_management_x
 - story: new to rasa/bots, explain stack and try it out
   steps:
   - intent: greet
@@ -326,20 +310,17 @@ stories:
   - action: utter_built_bot_before
   - intent: deny
   - action: utter_explain_rasa_components
-  - action: utter_rasa_components_details
-  - action: utter_ask_explain_nlucorex
+  - action: utter_faq/rasa_components
+  - action: utter_ask_explain_nlu_dialogue_management_x
   - intent: chitchat
   - action: utter_chitchat
-  - action: utter_ask_explain_nlucorex
+  - action: utter_ask_explain_nlu_dialogue_management_x
   - or:
     - intent: affirm
-    - intent: how_to_get_started
-      entities:
-      - product: all
     - intent: explain
-  - action: utter_explain_nlu
-  - action: utter_explain_core
-  - action: utter_explain_x
+  - action: utter_faq/nlu
+  - action: utter_faq/dialogue_management
+  - action: utter_faq/rasax
 - story: new to rasa/bots, explain stack and try it out
   steps:
   - intent: greet
@@ -358,20 +339,17 @@ stories:
   - action: utter_built_bot_before
   - intent: deny
   - action: utter_explain_rasa_components
-  - action: utter_rasa_components_details
-  - action: utter_ask_explain_nlucorex
+  - action: utter_faq/rasa_components
+  - action: utter_ask_explain_nlu_dialogue_management_x
   - or:
     - intent: affirm
-    - intent: how_to_get_started
-      entities:
-      - product: all
     - intent: explain
-  - action: utter_explain_nlu
-  - action: utter_explain_core
-  - action: utter_explain_x
+  - action: utter_faq/nlu
+  - action: utter_faq/dialogue_management
+  - action: utter_faq/rasax
   - intent: chitchat
   - action: utter_chitchat
-- story: new to rasa/bots, explain core and try out stack
+- story: new to rasa/bots, explain dialogue management and try out stack
   steps:
   - intent: greet
   - action: action_greet_user
@@ -389,19 +367,22 @@ stories:
   - action: utter_built_bot_before
   - intent: deny
   - action: utter_explain_rasa_components
-  - action: utter_rasa_components_details
-  - action: utter_ask_explain_nlucorex
-  - intent: how_to_get_started
+  - action: utter_faq/rasa_components
+  - action: utter_ask_explain_nlu_dialogue_management_x
+  - intent: faq
     entities:
-    - product: core
-  - action: utter_explain_core
+    - product: dialogue management
+  - slot_was_set:
+    - product: dialogue management
+  - action: utter_faq
+  - action: action_set_faq_slot
   - action: utter_also_explain_nlu
   - intent: chitchat
   - action: utter_chitchat
   - action: utter_also_explain_nlu
   - intent: deny
   - action: utter_anything_else
-- story: new to rasa/bots, explain core and try out stack
+- story: new to rasa/bots, explain dialogue management and try out stack
   steps:
   - intent: greet
   - action: action_greet_user
@@ -419,18 +400,21 @@ stories:
   - action: utter_built_bot_before
   - intent: deny
   - action: utter_explain_rasa_components
-  - action: utter_rasa_components_details
-  - action: utter_ask_explain_nlucorex
-  - intent: how_to_get_started
+  - action: utter_faq/rasa_components
+  - action: utter_ask_explain_nlu_dialogue_management_x
+  - intent: faq
     entities:
-    - product: core
-  - action: utter_explain_core
+    - product: dialogue management
+  - slot_was_set:
+    - product: dialogue management
+  - action: utter_faq
+  - action: action_set_faq_slot
   - action: utter_also_explain_nlu
   - intent: deny
   - action: utter_anything_else
   - intent: chitchat
   - action: utter_chitchat
-- story: new to rasa/bots, explain core, then nlu and try out stack
+- story: new to rasa/bots, explain dialogue management, then nlu and try out stack
   steps:
   - intent: greet
   - action: action_greet_user
@@ -448,19 +432,22 @@ stories:
   - action: utter_built_bot_before
   - intent: deny
   - action: utter_explain_rasa_components
-  - action: utter_rasa_components_details
-  - action: utter_ask_explain_nlucorex
-  - intent: how_to_get_started
+  - action: utter_faq/rasa_components
+  - action: utter_ask_explain_nlu_dialogue_management_x
+  - intent: faq
     entities:
-    - product: core
-  - action: utter_explain_core
+    - product: dialogue management
+  - slot_was_set:
+    - product: dialogue management
+  - action: utter_faq
+  - action: action_set_faq_slot
   - action: utter_also_explain_nlu
   - intent: chitchat
   - action: utter_chitchat
   - action: utter_also_explain_nlu
   - intent: affirm
-  - action: utter_explain_nlu
-- story: new to rasa/bots, explain core, then nlu and try out stack
+  - action: utter_faq/nlu
+- story: new to rasa/bots, explain dialogue management, then nlu and try out stack
   steps:
   - intent: greet
   - action: action_greet_user
@@ -478,15 +465,18 @@ stories:
   - action: utter_built_bot_before
   - intent: deny
   - action: utter_explain_rasa_components
-  - action: utter_rasa_components_details
-  - action: utter_ask_explain_nlucorex
-  - intent: how_to_get_started
+  - action: utter_faq/rasa_components
+  - action: utter_ask_explain_nlu_dialogue_management_x
+  - intent: faq
     entities:
-    - product: core
-  - action: utter_explain_core
+    - product: dialogue management
+  - slot_was_set:
+    - product: dialogue management
+  - action: utter_faq
+  - action: action_set_faq_slot
   - action: utter_also_explain_nlu
   - intent: affirm
-  - action: utter_explain_nlu
+  - action: utter_faq/nlu
   - intent: chitchat
   - action: utter_chitchat
 - story: new to rasa/bots, explain nlu and try out stack
@@ -507,16 +497,17 @@ stories:
   - action: utter_built_bot_before
   - intent: deny
   - action: utter_explain_rasa_components
-  - action: utter_rasa_components_details
-  - action: utter_ask_explain_nlucorex
-  - intent: how_to_get_started
+  - action: utter_faq/rasa_components
+  - action: utter_ask_explain_nlu_dialogue_management_x
+  - intent: faq
     entities:
     - product: nlu
-  - action: utter_explain_nlu
-  - action: utter_also_explain_core
+  - action: utter_faq
+  - action: action_set_faq_slot
+  - action: utter_also_explain_dialogue_management
   - intent: chitchat
   - action: utter_chitchat
-  - action: utter_also_explain_core
+  - action: utter_also_explain_dialogue_management
   - intent: deny
   - action: utter_anything_else
 - story: new to rasa/bots, explain nlu and try out stack
@@ -537,13 +528,14 @@ stories:
   - action: utter_built_bot_before
   - intent: deny
   - action: utter_explain_rasa_components
-  - action: utter_rasa_components_details
-  - action: utter_ask_explain_nlucorex
-  - intent: how_to_get_started
+  - action: utter_faq/rasa_components
+  - action: utter_ask_explain_nlu_dialogue_management_x
+  - intent: faq
     entities:
     - product: nlu
-  - action: utter_explain_nlu
-  - action: utter_also_explain_core
+  - action: utter_faq
+  - action: action_set_faq_slot
+  - action: utter_also_explain_dialogue_management
   - intent: deny
   - action: utter_anything_else
   - intent: chitchat
@@ -566,11 +558,11 @@ stories:
   - action: utter_built_bot_before
   - intent: deny
   - action: utter_explain_rasa_components
-  - action: utter_rasa_components_details
-  - action: utter_ask_explain_nlucorex
+  - action: utter_faq/rasa_components
+  - action: utter_ask_explain_nlu_dialogue_management_x
   - intent: chitchat
   - action: utter_chitchat
-  - action: utter_ask_explain_nlucorex
+  - action: utter_ask_explain_nlu_dialogue_management_x
   - intent: deny
   - action: utter_anything_else
 - story: new to rasa/bots, don't explain and try out stack
@@ -591,8 +583,8 @@ stories:
   - action: utter_built_bot_before
   - intent: deny
   - action: utter_explain_rasa_components
-  - action: utter_rasa_components_details
-  - action: utter_ask_explain_nlucorex
+  - action: utter_faq/rasa_components
+  - action: utter_ask_explain_nlu_dialogue_management_x
   - intent: deny
   - action: utter_anything_else
   - intent: chitchat
@@ -675,15 +667,17 @@ stories:
   - slot_was_set:
     - onboarding: false
   - action: utter_ask_which_product
-  - intent: how_to_get_started
+  - intent: faq
     entities:
     - product: nlu
+  - action: utter_faq
+  - action: action_set_faq_slot
   - action: utter_ask_for_nlu_specifics
   - intent: chitchat
   - action: utter_chitchat
   - action: utter_ask_for_nlu_specifics
   - intent: deny
-  - action: utter_tutorialnlu
+  - action: utter_tutorial_nlu
   - action: utter_anything_else
 - story: not new to rasa + rasa x + nothing special
   steps:
@@ -701,20 +695,21 @@ stories:
   - slot_was_set:
     - onboarding: false
   - action: utter_ask_which_product
-  - intent: how_to_get_started
+  - intent: faq
     entities:
     - product: x
   - slot_was_set:
     - product: x
-  - action: utter_explain_x
-  - action: utter_also_explain_nlucore
+  - action: utter_faq
+  - action: action_set_faq_slot
+  - action: utter_also_explain_nlu_dialogue_management
   - intent: chitchat
   - action: utter_chitchat
   - or:
     - intent: affirm
     - intent: explain
-  - action: utter_explain_nlu
-  - action: utter_explain_core
+  - action: utter_faq/nlu
+  - action: utter_faq/dialogue_management
 - story: not new to rasa + rasa x + nothing special
   steps:
   - intent: greet
@@ -734,13 +729,14 @@ stories:
   - slot_was_set:
     - onboarding: false
   - action: utter_ask_which_product
-  - intent: how_to_get_started
+  - intent: faq
     entities:
     - product: x
   - slot_was_set:
     - product: x
-  - action: utter_explain_x
-  - action: utter_also_explain_nlucore
+  - action: utter_faq
+  - action: action_set_faq_slot
+  - action: utter_also_explain_nlu_dialogue_management
   - intent: deny
   - action: utter_anything_else
 - story: new to rasa + rasa x + nothing special
@@ -764,15 +760,16 @@ stories:
   - action: utter_built_bot_before
   - intent: deny
   - action: utter_explain_rasa_components
-  - action: utter_rasa_components_details
-  - action: utter_ask_explain_nlucorex
-  - intent: how_to_get_started
+  - action: utter_faq/rasa_components
+  - action: utter_ask_explain_nlu_dialogue_management_x
+  - intent: faq
     entities:
     - product: x
   - slot_was_set:
     - product: x
-  - action: utter_explain_x
-  - action: utter_also_explain_nlucore
+  - action: utter_faq
+  - action: action_set_faq_slot
+  - action: utter_also_explain_nlu_dialogue_management
   - intent: deny
   - action: utter_anything_else
   - intent: chitchat
@@ -793,9 +790,11 @@ stories:
   - slot_was_set:
     - onboarding: false
   - action: utter_ask_which_product
-  - intent: how_to_get_started
+  - intent: faq
     entities:
     - product: nlu
+  - action: utter_faq
+  - action: action_set_faq_slot
   - action: utter_ask_for_nlu_specifics
   - intent: chitchat
   - action: utter_chitchat
@@ -821,9 +820,11 @@ stories:
   - slot_was_set:
     - onboarding: false
   - action: utter_ask_which_product
-  - intent: how_to_get_started
+  - intent: faq
     entities:
     - product: nlu
+  - action: utter_faq
+  - action: action_set_faq_slot
   - action: utter_ask_for_nlu_specifics
   - intent: nlu_info
     entities:
@@ -852,9 +853,11 @@ stories:
   - slot_was_set:
     - onboarding: false
   - action: utter_ask_which_product
-  - intent: how_to_get_started
+  - intent: faq
     entities:
     - product: nlu
+  - action: utter_faq
+  - action: action_set_faq_slot
   - action: utter_ask_for_nlu_specifics
   - intent: nlu_info
     entities:
@@ -891,9 +894,11 @@ stories:
   - slot_was_set:
     - onboarding: false
   - action: utter_ask_which_product
-  - intent: how_to_get_started
+  - intent: faq
     entities:
     - product: nlu
+  - action: utter_faq
+  - action: action_set_faq_slot
   - action: utter_ask_for_nlu_specifics
   - intent: nlu_info
     entities:
@@ -933,9 +938,11 @@ stories:
   - slot_was_set:
     - onboarding: false
   - action: utter_ask_which_product
-  - intent: how_to_get_started
+  - intent: faq
     entities:
     - product: nlu
+  - action: utter_faq
+  - action: action_set_faq_slot
   - action: utter_ask_for_nlu_specifics
   - intent: nlu_info
     entities:
@@ -971,9 +978,11 @@ stories:
   - slot_was_set:
     - onboarding: false
   - action: utter_ask_which_product
-  - intent: how_to_get_started
+  - intent: faq
     entities:
     - product: nlu
+  - action: utter_faq
+  - action: action_set_faq_slot
   - action: utter_ask_for_nlu_specifics
   - intent: nlu_info
     entities:
@@ -1011,9 +1020,11 @@ stories:
   - slot_was_set:
     - onboarding: false
   - action: utter_ask_which_product
-  - intent: how_to_get_started
+  - intent: faq
     entities:
     - product: nlu
+  - action: utter_faq
+  - action: action_set_faq_slot
   - action: utter_ask_for_nlu_specifics
   - intent: nlu_info
     entities:
@@ -1037,7 +1048,6 @@ stories:
   - action: utter_anything_else
 - story: how to get started without privacy policy
   steps:
-  - intent: how_to_get_started
   - action: utter_ask_playground_install_info
   - intent: trigger_response_selector
     entities:
@@ -1056,14 +1066,11 @@ stories:
   - action: utter_ask_migration
   - intent: deny
   - action: utter_explain_rasa_components
-  - action: utter_rasa_components_details
-  - action: utter_ask_explain_nlucorex
+  - action: utter_faq/rasa_components
+  - action: utter_ask_explain_nlu_dialogue_management_x
   - or:
     - intent: affirm
-    - intent: how_to_get_started
-      entities:
-      - product: all
     - intent: explain
-  - action: utter_explain_nlu
-  - action: utter_explain_core
-  - action: utter_explain_x
+  - action: utter_faq/nlu
+  - action: utter_faq/dialogue_management
+  - action: utter_faq/rasax
